[gd_scene load_steps=2 format=3 uid="uid://b4bgplbbny2rt"]

[ext_resource type="Script" path="res://Scenes/Levels/Settings/settings_menu.gd" id="1_cqthj"]

[node name="SettingsMenu" type="CanvasLayer"]
script = ExtResource("1_cqthj")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 1152.0
offset_bottom = 648.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
tab_alignment = 1
current_tab = 0

[node name="Graphics" type="TabBar" parent="MarginContainer/VBoxContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer/Graphics"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 617.0
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Graphics/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 64

[node name="Setting 1" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Graphics/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Graphics/MarginContainer/VBoxContainer/Setting 1"]
layout_mode = 2
text = "Setting One"

[node name="Spacing" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer/Graphics/MarginContainer/VBoxContainer/Setting 1"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSlider" type="HSlider" parent="MarginContainer/VBoxContainer/TabContainer/Graphics/MarginContainer/VBoxContainer/Setting 1"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
value = 50.0

[node name="Setting 2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Graphics/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Graphics/MarginContainer/VBoxContainer/Setting 2"]
layout_mode = 2
text = "Setting Two"

[node name="Spacing" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer/Graphics/MarginContainer/VBoxContainer/Setting 2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CheckButton" type="CheckButton" parent="MarginContainer/VBoxContainer/TabContainer/Graphics/MarginContainer/VBoxContainer/Setting 2"]
layout_mode = 2

[node name="Audio" type="TabBar" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Spacing" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Spacing" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Defaults" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Default Settings
"

[node name="Confirm" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Apply Settings
"

[node name="Cancel" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Cancel Settings
"

[connection signal="changed" from="MarginContainer/VBoxContainer/TabContainer/Graphics/MarginContainer/VBoxContainer/Setting 1/HSlider" to="." method="_on_h_slider_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/TabContainer/Graphics/MarginContainer/VBoxContainer/Setting 2/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Defaults" to="." method="_on_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Cancel" to="." method="_on_cancel_pressed"]
